LPS-60828 Self-contained Shell Script so upgrades can be executed offline: no need to startup the app server